Fix  pictures of the cards seem to be distorted by JS

--- a/css/style.scss
+++ b/css/style.scss
@@ -503,7 +503,7 @@ strong {
 
 
 .story-card-item {
-  height: 410px;
+  min-height: 400px;
   padding: 0.5rem 0;
 
   .story-card {
